# geoproc_new

./: .clang-format  .cmake-format.py  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  aabb.hpp  bvh.cpp  bvh.hpp  delaunay.cpp  distance.cpp  distance.hpp  distance_test.cpp  endianness.hpp  fixed_point.hpp  fixed_point_demo.cpp  intersect.cpp  intersect.hpp  intersect_test.cpp  math.hpp  mesh_boolean.cpp  mesh_io.cpp  mesh_io.hpp  project_surface.cpp  ray.hpp  sample_cube.cpp  sample_surface.cpp  sample_volume.cpp  segment.hpp  test.hpp  triangle.hpp  vec.hpp  write_ply.cpp  write_ply.hpp
